objects/QIDC__OK_Record_Type_Mapping_ims__c.object
<CustomObject>
    <description>Record Type Mapping based on multiple picklist values</description>
    <fields>
        <fullName>QIDC__Country_ims__c</fullName>
        <description>To store the country code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To store the country code</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__OK_Object_Mapping_ims__c</fullName>
        <description>The OneKey entity that the record type mappings being mapped belong to.</description>
        <inlineHelpText>The OneKey entity that the record type mappings being mapped belong to.</inlineHelpText>
        <label>OneKey Object Mapping</label>
        <referenceTo>QIDC__OK_Object_Mapping_ims__c</referenceTo>
        <relationshipLabel>OneKey Record Type Mappings</relationshipLabel>
        <relationshipName>Record_Type_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__Priority_ims__c</fullName>
        <description>This field is used to know priority of record</description>
        <inlineHelpText>This field is used to know priority of record</inlineHelpText>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QIDC__Record_Type_Criteria_ims__c</fullName>
        <description>Record Type Criteria using multiple pick lists
Format: OK Field Developer Name 1:Value 1,Value 2;OK Field Developer Name 2: Value 1,Value 2;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Record Type Criteria using multiple pick lists
Format: OK Field Developer Name 1:Value 1,Value 2;OK Field Developer Name 2: Value 1,Value 2;</inlineHelpText>
        <label>Record Type Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Record_Type_Name_ims__c</fullName>
        <description>Developer name of the record type to map</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Developer name of the record type to map</inlineHelpText>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>OneKey Record Type Mapping</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Country_ims__c</columns>
        <columns>QIDC__OK_Object_Mapping_ims__c</columns>
        <columns>QIDC__Priority_ims__c</columns>
        <columns>QIDC__Record_Type_Criteria_ims__c</columns>
        <columns>QIDC__Record_Type_Name_ims__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RTM-{0000000}</displayFormat>
        <label>Record Type Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OneKey Record Type Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>